Fix whitespace for contributor stats on mobile

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -54,9 +54,6 @@ section {
         span.number {
           font-weight: 600;
         }
-        @include media-max(small) {
-          padding-top: 2rem;
-        }
       }
     }
   }
